--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -18,12 +18,12 @@ nav {
 
 a {
 	text-decoration: none;
-	opacity: 0.75;
-	color: #fff;
+	opacity: 0.90;
+	color: rgb(255, 255, 255);
 }
 
 a:hover {
-	opacity: 1;
+	opacity: 1.20;
 }
 
 a.btn {
@@ -31,7 +31,7 @@ a.btn {
 	text-transform: uppercase;
 	font-weight: bold;
 	text-align: center;
-	background-color: #3f51b5;
+	background-color: #e0a629;
 	opacity: 1;
 }
 
@@ -56,7 +56,7 @@ section:not(.hero):nth-child(even) {
 hr {
 	width: 250px;
 	height: 3px;
-	background-color: #3f51b5;
+	background-color: #e0a629;
 	border: 0;
 	margin-bottom: 50px;
 }
@@ -320,7 +320,9 @@ header nav li {
 }
 
 .packages .grid li i {
-	color: #8c9eff;
+	/* color: #8c9eff; */
+	color: #ddbb49;
+
 }
 
 .packages .grid li h4 {
