text hover and color at contact part

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -68,6 +68,34 @@ section h3.title {
 	text-align: center;
 }
 
+section h3:hover{
+	background-color: yellow;
+	background-position: 0 100%;
+}
+.tooltip {
+	position: relative;
+	display: inline-block;
+	border-bottom: 1px dotted black;
+  }
+  
+  .tooltip .tooltiptext {
+	visibility: hidden;
+	width: 120px;
+	background-color: black;
+	color: #fff;
+	text-align: center;
+	border-radius: 6px;
+	padding: 5px 0;
+  
+	/* Position the tooltip */
+	position: absolute;
+	z-index: 1;
+  }
+  
+  .tooltip:hover .tooltiptext {
+	visibility: visible;
+  }
+
 section p {
 	max-width: 775px;
 	line-height: 2;
@@ -319,6 +347,29 @@ header nav li {
 .contact form .btn {
 	padding: 18px 42px;
 }
+.tooltip {
+	position: relative;
+	display: inline-block;
+	border-bottom: 1px dotted black;
+  }
+  
+  .tooltip .tooltiptext {
+	visibility: hidden;
+	width: 120px;
+	background-color: black;
+	color: #fff;
+	text-align: center;
+	border-radius: 6px;
+	padding: 5px 0;
+  
+	/* Position the tooltip */
+	position: absolute;
+	z-index: 1;
+  }
+  
+  .tooltip:hover .tooltiptext {
+	visibility: visible;
+  }
 
 .contact form input {
 	padding: 15px;
